--- a/source/_data/widget.yml
+++ b/source/_data/widget.yml
@@ -8,6 +8,6 @@ bottom:
         - class_name: user-map
           id_name: user-map
           name: 访客地图
-          icon: fas fa-heartbeat
+          icon: iconfont icon-map
           order:
           html: '<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=5V2tOKp8qAdRM-i8eu7ETTO9ugt5uKbbG-U7Yj8uMl8"></script>'
