--- a/source/_data/widget.yml
+++ b/source/_data/widget.yml
@@ -1,9 +1,11 @@
 top:
-        - class_name:
-                id_name:
-                name:
-                icon:
-                html:
+        - class_name: chatgpt
+          id_name: chatgpt
+          name: Webchat
+          icon: iconfont icon-robot
+          order:
+          html: '<a href="https://webchat.store" target="_blank">Webchat聊天机器人</a>'
+
 bottom:
         - class_name: user-map
           id_name: user-map
